fix sidebar overflow

--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: space-between;
   color: #fff;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   .cartFlex {
     display: flex;
